--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTExNTYzMTAxMDY0MjY2OTcwOA.G1UrEp.68q5f5qM5r5P9_3rQIWp0pH_hEg-802R4a4Ev8",
+  "token": "MTExNTYzMTAxMDY0MjY2OTcwOA.GKaZTx.YphpUoNw4gjDVnEecyDoUVJvImLX96MxKmddVE",
   "totalShards": "auto",
   "topggToken": "",
   "mongooseToken": "mongodb+srv://berkekodalak:Berke123@cluster0.d3xg8tt.mongodb.net/"
