--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "MTExNTYzMTAxMDY0MjY2OTcwOA.GKaZTx.YphpUoNw4gjDVnEecyDoUVJvImLX96MxKmddVE",
+  "token": "MTExNTYzMTAxMDY0MjY2OTcwOA.GuWdVO.8oQmehmniFEDP_zlKis8oE-FGeZpEv9Qcq0jlY",
   "totalShards": "auto",
   "topggToken": "",
   "mongooseToken": "mongodb+srv://berkekodalak:Berke123@cluster0.d3xg8tt.mongodb.net/"
